[tool.poetry]
name = "toolhunt"
version = "0.1.0"
description = "A web application for editing Toolhub records in a fun and easy way"
authors = ["nicole.barnabee@gmail.com", "hannah.waruguru8@gmail.com"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
flask-migrate = "^4.0.2"
mysqlclient = "^2.1.1"
flask-smorest = "^0.40.0"
sqlalchemy = "^2.0.0"
python-dotenv = "^0.21.1"
requests = "^2.28.2"
authlib = "^1.2.0"
flask-cors = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
